# myagent

OpenClaw_light_agent/: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.en.md  README.md  docker-compose.build.yml  docker-compose.yml  entrypoint.sh  rust-toolchain.toml
OpenClaw_light_agent/.cargo/: config.toml
OpenClaw_light_agent/config/: openclaw.json.example
OpenClaw_light_agent/deploy/: openclaw-light.service
OpenClaw_light_agent/docs/: README.md
OpenClaw_light_agent/hooks/: pre-push
OpenClaw_light_agent/scripts/: deploy.sh  docker-build.sh
OpenClaw_light_agent/src/: backup.rs  config.rs  error.rs  lib.rs  main.rs
OpenClaw_light_agent/src/agent/: context.rs  mod.rs  react_loop.rs
OpenClaw_light_agent/src/auth/: mod.rs
OpenClaw_light_agent/src/channel/: cli.rs  feishu.rs  http_api.rs  mod.rs  streaming.rs  telegram.rs  types.rs  web_chat.html
OpenClaw_light_agent/src/memory/: mod.rs  store.rs
OpenClaw_light_agent/src/provider/: mod.rs
OpenClaw_light_agent/src/session/: mod.rs  store.rs
OpenClaw_light_agent/src/tools/: agent_tool.rs  backup.rs  cron.rs  exec.rs  file.rs  get_time.rs  ha_control.rs  html_utils.rs  mcp.rs  memory.rs  mod.rs  web_fetch.rs  web_search.rs
OpenClaw_light_agent/tests/: integration_tests.rs
OpenClaw_light_agent/tests/fixtures/: gen_speech.ps1  mock_mcp_server.py  slow_mcp_server.py
OpenClaw_light_agent/tests/integration/: edge_tts.rs  exec_skills.rs  file_tools.rs  google_stt.rs  http_api.rs  mcp_client.rs  mcp_timeout.rs  mod.rs  (+4 more)
(+59 files in other folders)
