[package]
name = "openclaw-light"
version = "0.1.0"
edition = "2021"
rust-version = "1.84"
description = "Lightweight Rust gateway for OpenClaw — personal AI assistant optimized for resource-constrained devices"
license = "Apache-2.0 OR MIT"

[lib]
name = "openclaw_light"
path = "src/lib.rs"

[[bin]]
name = "openclaw-light"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "time", "fs", "signal", "sync", "net", "io-util", "io-std", "process"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
json5 = "0.4"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
sha2 = "0.10"
url = "2"
futures-util = "0.3"
bytes = "1"
flate2 = "1"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
